--- a/package.json
+++ b/package.json
@@ -22,7 +22,14 @@
     "@tiptap/extension-text-style": "^3.9.1",
     "@tiptap/react": "^3.9.1",
     "@tiptap/extension-character-count": "^3.9.1",
-    "@tiptap/suggestion": "^3.9.1"
+    "@tiptap/suggestion": "^3.9.1",
+    "@tiptap/extension-table": "^3.9.1",
+    "@tiptap/extension-table-cell": "^3.9.1",
+    "@tiptap/extension-table-header": "^3.9.1",
+    "@tiptap/extension-table-row": "^3.9.1",
+    "@tiptap/extension-image": "^3.9.1",
+    "@tiptap/extension-text-align": "^3.9.1",
+    "@tiptap/extension-heading": "^3.9.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
