--- a/package.json
+++ b/package.json
@@ -1,40 +1,15 @@
 {
-  "name": "copy-of-scrumowl-v2",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "scrumowl-backend",
+  "version": "1.0.0",
+  "description": "Professional backend for the ScrumOwl project with SQLite persistence",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.js"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "@google/genai": "^1.27.0",
-    "lodash-es": "^4.17.21",
-    "@tiptap/extension-code-block": "^3.9.1",
-    "@tiptap/extension-color": "^3.9.1",
-    "@tiptap/extension-link": "^3.9.1",
-    "@tiptap/starter-kit": "^3.9.1",
-    "@tiptap/extension-highlight": "^3.9.1",
-    "tippy.js": "^6.3.7",
-    "@tiptap/extension-text-style": "^3.9.1",
-    "@tiptap/react": "^3.9.1",
-    "@tiptap/extension-character-count": "^3.9.1",
-    "@tiptap/suggestion": "^3.9.1",
-    "@tiptap/extension-table": "^3.9.1",
-    "@tiptap/extension-table-cell": "^3.9.1",
-    "@tiptap/extension-table-header": "^3.9.1",
-    "@tiptap/extension-table-row": "^3.9.1",
-    "@tiptap/extension-image": "^3.9.1",
-    "@tiptap/extension-text-align": "^3.9.1",
-    "@tiptap/extension-heading": "^3.9.1"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "better-sqlite3": "^8.4.0",
+    "uuid": "^9.0.1"
   }
 }
